--- a/Atividades/index.html
+++ b/Atividades/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Halloween</title>
+    <title>Halloween !!</title>
 </head>
 <body bgColor="black" text="white">
 
-    <h1 align="center"> <bolt> Halloween !! </bolt></h1>
-    <h2 align="center"> <bolt> <span style="color: #1efdff; ">Lucas do Carmo</span> </bolt></h2>
-    <h4 align="center"> <bolt> Este eh uma index de teste, para a atividade de Programação para Redes :D </bolt></h4>
+    <h1 align="center"> <bolt> 31/10/19 - <span style="color: #ff7900; ">Doces</span> ou <span style="color: #ff0022; ">Travessuras?</span> </bolt></h1>
+    <h4 align="center"> <bolt> <span style="color: #1efdff; ">Esta é uma index de teste, para a atividade de Programação para Redes - Lucas do Carmo </span> </bolt></h4>
 
     <div align="center">
         <!--<img src='ow.jpg'>-->
