--- a/Atividades/Atividade 7/index.html
+++ b/Atividades/Atividade 7/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Contatos</title>
-    <script src="metodos.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="metodos.js"></script>
 </head>
 <body>
 
